--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,10 @@ canonical: https://angtianwang.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
-linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
+google_scholar: https://scholar.google.com/citations?user=YR7re-cAAAAJ&hl=zh-CN
+cv_link: assets/files/angtianwang_cv.pdf
+github_link: https://github.com/Angtian
+linkedin: https://www.linkedin.com/in/angtian-wang-45977921b/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
