--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Angtian Wang
-position: Ph.D. Student
-affiliation: Johns Hopkins University
+position: Research Scientist
+affiliation: ByteDance / TikTok
 email: angtianwang@jhu.edu
 
 # Search Engine Optimization (SEO)
