--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Angtian Wang
 position: Research Scientist
 affiliation: ByteDance / TikTok
-email: angtianwang@jhu.edu
+email: angtianwang@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
