--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: angtianwang@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Computer Vision, 3D Vision, Differentiable Rendering, Inverse Graphics
+keywords: Video Generation, 3D Vision, Differentiable Rendering
 description: I am Angtian Wang, a research scientist at ByteDance. I received my PhD from Johns Hopkins University, advised by Bloomberg Distinguished Professor Dr. Alan Yuille.
 canonical: https://angtianwang.github.io/
 
